added comment about allele

--- a/predict_hla.ipynb
+++ b/predict_hla.ipynb
@@ -664,7 +664,7 @@
     }
    ],
    "source": [
-    "y = y_fourdigits[:, 0] / 2\n",
+    "y = y_fourdigits[:, 0] / 2 # edit this line to predict other alleles besides HLA-A*01:01\n",
     "y.shape"
    ]
   },
